--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/typeorm": "^8.0.3",
     "apollo-server-express": "^3.6.3",
     "connect-typeorm": "^1.1.4",
+    "express-session": "^1.17.2",
     "graphql": "^16.3.0",
     "mysql2": "^2.3.3",
     "passport": "^0.5.2",
